2013-10-10  Will Newton  <will.newton@linaro.org>

	* aarch64-linux-tdep.c (aarch64_linux_init_abi): Call
	linux_init_abi.

2013-10-10  Joel Brobecker  <brobecker@adacore.com>

	* cli/cli-cmds.c (show_baud_rate): Moved to serial.c as
	serial_baud_show_cmd.
	(_initialize_cli_cmds): Delete the code creating the
	"set/show remotebaud" commands.
	* serial.c (baud_rate): Move here from top.c.
	(serial_baud_show_cmd): Move here from cli/cli-cmds.c.
	(_initialize_serial): Create "set/show serial baud" commands.
	Add "set/show remotebaud" command aliases.
	* top.c (baud_rate): Moved to serial.c.
	* NEWS: Document the new "set/show serial baud" commands,
	replacing "set/show remotebaud".

2013-10-09  Pedro Alves  <palves@redhat.com>

	* breakpoint.c (insert_bp_location): Use memory_error_message to
	build the memory error string.
	* c-lang.c: Include "gdbcore.h".
	(c_get_string): Use memory_error to throw error.
	(target_xfer_memory_error): Delete.
	(memory_error_message): New, factored out from
	target_xfer_memory_error.
	(memory_error): Change parameter type to target_xfer_error.
	Rewrite.
	(read_memory): Use memory_error instead of
	target_xfer_memory_error.
	* gdbcore.h: Include "target.h".
	(memory_error): Change parameter type to target_xfer_error.
	(memory_error_message): Declare function.
	* target.c (target_read_memory, target_read_stack)
	(target_write_memory, target_write_raw_memory): Return
	TARGET_XFER_E_IO on error.  Adjust comments.
	(get_target_memory): Pass TARGET_XFER_E_IO to memory_error,
	instead of EIO.
	* target.h (target_read, target_insert_breakpoint)
	(target_remove_breakpoint): Adjust comments.
	* valprint.c (partial_memory_read): Rename parameter, and adjust
	comment.
	(val_print_string): Use memory_error_message to build the memory
	error string.

2013-10-09  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* common/filestuff.c (gdb_fopen_cloexec): Remove initialization of
	result variable.  Rename variable fopen_e_ever_failed to